--- a/client/main.css
+++ b/client/main.css
@@ -70,3 +70,83 @@ li:hover{
     text-decoration: line-through;
     background: rgba(0,0,0,0.2);
 }
+.navigation {
+    width: 100%;
+    background-color: black;
+  }
+  
+.imgs {
+    width: 25px; border-radius: 50px;
+    float: left;
+  }
+  
+.logout {
+    font-size: .8em;
+    font-family: 'Oswald', sans-serif;
+      position: relative;
+    right: -18px;
+    bottom: -4px;
+    overflow: hidden;
+    letter-spacing: 3px;
+    opacity: 0;
+    transition: opacity .45s;
+    -webkit-transition: opacity .35s;
+    
+  }
+  
+  .button {
+      text-decoration: none;
+      float: right;
+    padding:10px;
+    margin: 10px;
+    color: white;
+    width: 45px;
+    background-color: black; 
+    overflow: hidden
+  }
+  
+  a:hover {
+    width: 120px;
+  }
+  
+  a:hover .logout{
+    opacity: .9;
+  }
+  /* Style the list items */
+  ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    list-style-type: none;
+    background: #eee;
+    font-size: 18px;
+    transition: 0.2s;
+  }
+  
+  ul li:hover {
+    background: #ddd;
+  }
+  
+  ul li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #212529;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+  }
+  .close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+  }
+  
+  .close:hover {
+    background-color: #0d6efd;
+    color: white;
+  }
